# possu-web

./: .gitignore  Cargo.toml  Trunk.toml
.cargo/: config.toml
src/: lib.rs  main.rs
src/components/: datetime_select.rs  input.rs  mod.rs  monetary_input.rs  select.rs
src/pages/: login.rs  mod.rs  new_entry.rs
src/requests/: mod.rs
src/types/: datetime.rs  mod.rs  select.rs
trunk-src/: index.html
